--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
         "laravel/tinker": "^2.10.1",
         "livewire/flux": "^2.1.1",
         "livewire/volt": "^1.7.0",
-        "symfony/http-client": "^7.3",
-        "symfony/mailgun-mailer": "^7.3"
+        "symfony/http-client": "^7.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
